--- a/package.json
+++ b/package.json
@@ -24,34 +24,34 @@
     "utils"
   ],
   "dependencies": {
-    "gatsby-source-filesystem": "5.8.0",
-    "google-oauth2-env-vars": "^1.3.0",
-    "googleapis": "114.0.0",
+    "gatsby-source-filesystem": "^5.11.0",
+    "google-oauth2-env-vars": "^1.4.0",
+    "googleapis": "^118.0.0",
     "json2md": "^2.0.0",
     "lodash": "^4.17.21",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.5.0",
-    "@commitlint/config-conventional": "^17.4.4",
+    "@commitlint/cli": "^17.6.5",
+    "@commitlint/config-conventional": "^17.6.5",
     "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/commit-analyzer": "^10.0.1",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^8.0.7",
-    "@semantic-release/npm": "^10.0.2",
-    "@semantic-release/release-notes-generator": "^10.0.3",
-    "cz-conventional-changelog": "3.3.0",
-    "eslint": "^8.36.0",
+    "@semantic-release/github": "^9.0.3",
+    "@semantic-release/npm": "^10.0.4",
+    "@semantic-release/release-notes-generator": "^11.0.3",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jest": "^27.2.2",
     "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
-    "lint-staged": "^13.2.0",
-    "prettier": "2.8.7",
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "semantic-release": "^21.0.0"
+    "semantic-release": "^21.0.5"
   },
   "bin": {
     "gatsby-source-google-docs-token": "./utils/generate-token.js"
